# CoBoard-Cpp

./: .gitignore  README.md
.VSCodeCounter/2026-02-06_20-59-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-11_01-16-39/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-23_03-20-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-03-04_09-59-32/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
CanvasServer/: CMakeLists.txt  message.proto
CanvasServer/include/CanvasServer/: CSession.h  LogicSystem.h  MsgNode.h  const.h  message.pb.h
CanvasServer/src/: CSession.cpp  LogicSystem.cpp  Room.cpp  message.pb.cc
CanvasServer2/include/CanvasServer/: CSession.h  Room.h  const.h
CanvasServer2/src/: CSession.cpp  LogicSystem.cpp  RedisMgr.cpp  Room.cpp  message.pb.cc
DBClient/: CMakeLists.txt  README.md  canvas.cpp  canvas.h  canvas.ui  config.ini  global.cpp  global.h  hoverwidget.cpp  hoverwidget.h  httpmgr.cpp  httpmgr.h  lobbywidget.cpp  lobbywidget.h  lobbywidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  message.pb.cc  message.pb.h  paintscene.cpp  paintscene.h  registerwidget.cpp  registerwidget.h  registerwidget.ui  res.qrc  singleton.h  tcpmgr.cpp  tcpmgr.h  tipwidget.cpp  tipwidget.h  userdata.cpp  userdata.h  userlisttree.cpp  userlisttree.h  usermgr.cpp  usermgr.h  (+5 more)
GateServer/: CMakeLists.txt  README.md  config.ini  gen_message.bat
GateServer/include/GateServer/: AsioIOServicePool.h  CServer.h  GateServer.h  HttpConnection.h  LogicSystem.h  RedisMgr.h  VerifyGrpcClient.h  const.h  message.pb.h
GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  RedisMgr.cpp  VerifyGrpcClient.cpp  message.grpc.pb.cc  message.pb.cc
LogicServer/: message.proto
LogicServer/src/: message.pb.cc
VerifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
